@@ -49,9 +49,9 @@ dnl    are platform dependent
 dnl  * in Linux, the library will be named
 dnl    libname.so.(XINE_LT_CURRENT - XINE_LT_AGE).XINE_LT_AGE.XINE_LT_REVISION
 
-XINE_LT_CURRENT=18
-XINE_LT_REVISION=2
-XINE_LT_AGE=17
+XINE_LT_CURRENT=19
+XINE_LT_REVISION=0
+XINE_LT_AGE=18
 
 dnl for a release tarball do "rm .cvsversion" before "make dist"
 if test -f "${srcdir-.}/.cvsversion"; then
